--- a/voorblad.tex
+++ b/voorblad.tex
@@ -13,7 +13,7 @@
 }
 
 \vspace*{\fill}
-\hspace{-\parindent}Supervisors: prof. dr. E. Mannens,~ prof. dr. T. Schrijvers\\
+\hspace{-\parindent}Supervisors: prof. dr. R. Verborgh,~ prof. dr. T. Schrijvers\\
 \hspace{-\parindent}Dissertation submitted in fulfillment of the requirements for the degree of\\
 \hspace{-\parindent}Doctor (Ph.D.) in Computer Science Engineering\\
 
