--- a/board.tex
+++ b/board.tex
@@ -14,6 +14,6 @@ tba
 
 \section*{Supervisors}
 
-prof. dr. Erik Mannens {\smaller \emph{Ghent University, Belgium}}
+prof. dr. Ruben Verborgh {\smaller \emph{Ghent University, Belgium}}
 
 prof. dr. Tom Schrijvers {\smaller \emph{KU Leuven, Belgium}}
