start to talk about architecture

--- a/refs.bib
+++ b/refs.bib
@@ -1413,3 +1413,129 @@ pages="17--29",
 abstract="In this paper we argue that a realistic architecture for the Semantic Web must be based on multiple independent, but interoperable, stacks of languages. In particular, we argue that there is a very important class of rule-based languages, with over thirty years of history and experience, which cannot be layered on top of OWL and must be included in the Semantic Web architecture alongside with the stack of OWL-based languages. The class of languages we are after includes rules in the Logic Programming style, which support default negation. We briefly survey the logical foundations of these languages and then discuss an interoperability framework in which such languages can co-exist with OWL and its extensions.",
 isbn="978-3-540-32270-2"
 }
+
+@InProceedings{twotowers,
+author="Horrocks, Ian
+and Parsia, Bijan
+and Patel-Schneider, Peter
+and Hendler, James",
+editor="Fages, Fran{\c{c}}ois
+and Soliman, Sylvain",
+title="Semantic Web Architecture: Stack or Two Towers?",
+booktitle="Principles and Practice of Semantic Web Reasoning",
+year="2005",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="37--41",
+abstract="We discuss language architecture for the Semantic Web, and in particular different proposals for extending this architecture with a rules component. We argue that an architecture that maximises compatibility with existing languages, in particular RDF and OWL, will benefit the development of the Semantic Web, and still allow for forms of closed world assumption and negation as failure.",
+isbn="978-3-540-32028-9"
+}
+
+@inproceedings{DLP,
+ author = {Grosof, Benjamin N. and Horrocks, Ian and Volz, Raphael and Decker, Stefan},
+ title = {Description Logic Programs: Combining Logic Programs with Description Logic},
+ booktitle = {Proceedings of the 12th International Conference on World Wide Web},
+ series = {WWW '03},
+ year = {2003},
+ isbn = {1-58113-680-3},
+ location = {Budapest, Hungary},
+ pages = {48--57},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/775152.775160},
+ doi = {10.1145/775152.775160},
+ acmid = {775160},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {RDF, XML, description logic, inferencing, information integration, interoperability, knowledge representation, logic programs, model-theoretic semantics, ontologies, rules, semantic web, translation},
+} 
+
+@inproceedings{knorr,
+  title={Reconciling OWL and Non-monotonic Rules for the Semantic Web},
+  author={Knorr, Matthias and Hitzler, Pascal and Maier, Frederick},
+  booktitle={European Conference on Artificial Intelligence},
+  volume={474},
+  pages={479}
+}
+
+@inproceedings{unilogic,
+ author = {Kr\"{o}tzsch, Markus and Maier, Frederick and Krisnadhi, Adila and Hitzler, Pascal},
+ title = {A Better Uncle for OWL: Nominal Schemas for Integrating Rules and Ontologies},
+ booktitle = {Proceedings of the 20th International Conference on World Wide Web},
+ series = {WWW '11},
+ year = {2011},
+ isbn = {978-1-4503-0632-4},
+ location = {Hyderabad, India},
+ pages = {645--654},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1963405.1963496},
+ doi = {10.1145/1963405.1963496},
+ acmid = {1963496},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {datalog, description logic, semantic web rule language, sroiq, tractability, web ontology language},
+} 
+@article{DLASP,
+ author = {Motik, Boris and Rosati, Riccardo},
+ title = {Reconciling Description Logics and Rules},
+ journal = {J. ACM},
+ issue_date = {June 2010},
+ volume = {57},
+ number = {5},
+ month = jun,
+ year = {2008},
+ issn = {0004-5411},
+ pages = {30:1--30:62},
+ articleno = {30},
+ numpages = {62},
+ url = {http://doi.acm.org/10.1145/1754399.1754403},
+ doi = {10.1145/1754399.1754403},
+ acmid = {1754403},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Description logics, answer set programming, combined complexity, data complexity},
+} 
+
+@incollection{hogan,
+  title={Linked Data and the Semantic Web Standards},
+  author={Hogan, Aidan},
+  booktitle={Linked Data and the Semantic Web Standards},
+  year={2013},
+  publisher={Chapman and Hall/CRC Press}
+}
+
+@online{stack1,
+  author = {Berners-Lee, Tim},
+  title = {Semantic Web on XML},
+  note = {\url{https://www.w3.org/2000/Talks/1206-xml2k-tbl/slide10-0.html}},
+  howpublished = {{\sc w\oldstylenums3c} Web Site},
+  day = 6,
+  month = december,
+  year = 2000,
+}
+@online{stack2,
+  author = {Berners-Lee, Tim},
+  title = {The Semantic Web and Challenges},
+  note = {\url{https://www.w3.org/2003/Talks/01-sweb-tbl/slide15-0.html}},
+  howpublished = {{\sc w\oldstylenums3c} Web Site},
+  year = 2003,
+}
+@online{stack3,
+  author = {Berners-Lee, Tim},
+  title = {Web for real people},
+  note = {\url{https://www.w3.org/2005/Talks/0511-keynote-tbl/#[17]}},
+  howpublished = {{\sc w\oldstylenums3c} Web Site},
+  year = 2005,
+}
+@online{stack4,
+  author = {Berners-Lee, Tim},
+  title = {Artificial Intelligence and the Semantic Web},
+  note = {\url{https://www.w3.org/2006/Talks/0718-aaai-tbl/Overview.html#(14)}},
+  howpublished = {{\sc w\oldstylenums3c} Web Site},
+  year = 2006,
+}
+@online{stack5,
+  title = {Semantic Web stack},
+  note = {\url{https://www.w3.org/2007/03/layerCake.svg}},
+  howpublished = {{\sc w\oldstylenums3c} Web Site},
+  year = 2007,
+}
