more about architecture

--- a/main.tex
+++ b/main.tex
@@ -483,7 +483,7 @@ citecolor = black]{hyperref} % make links
 %\input{chapters/N3/Finding_the_meaning}
 %\input{chapters/N3/directsemantics}
 \chapter{Elaboration Semantics for N3}\label{ela}
-\chapter{Esplicit Semantics for N3}\label{exsem}
+\chapter{Explicit Semantics for N3}\label{exsem}
 
 
 \part{N3 in relation to other frameworks}\label{others}
