--- a/refs.bib
+++ b/refs.bib
@@ -1501,3 +1501,59 @@ isbn="978-3-540-32028-9"
   howpublished = {{\sc w\oldstylenums3c} Web Site},
   year = 2007,
 }
+@online{jsonld,
+  author = {Sporny, Manu and
+    Longley, Dave and  
+    Kellogg, Gregg and 
+    Lanthaler, Markus and 
+    Lindstr\"om, Niklas  },
+  title = {A JSON-based Serialization for Linked Data},
+  note = {\url{https://www.w3.org/TR/json-ld/}},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  day = 16,
+  month = jan,
+  year = 2014,
+}
+@online{owlrdfsem,
+  author = {     Carroll, Jeremy and
+     Herman, Ivan and
+     Patel-Schneider, Peter F.  },
+  editor={Schneider, Michael}   
+  title = {OWL 2 Web Ontology Language
+RDF-Based Semantics (Second Edition)},
+  note = {\url{https://www.w3.org/TR/owl2-rdf-based-semantics/}},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  day = 11,
+  month = dec,
+  year = 2012,
+}
+@online{owldsem,
+  author = {Horrocks,       Ian and
+    Parsia, Bijan and 
+    Sattler, Uli   },
+  editor={    Motik, Boris and
+     Patel-Schneider, Peter F. and
+    Cuenca Grau, Bernardo }   
+  title = {OWL 2 Web Ontology Language
+Direct Semantics (Second Edition)},
+  note = {\url{https://www.w3.org/TR/owl2-direct-semantics/}},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  day = 11,
+  month = dec,
+  year = 2012,
+}
+@InProceedings{rif,
+  author    = {Michael Kifer},
+  title     = {Rule Interchange Format: The Framework},
+  booktitle = {RR 2008: Web Reasoning and Rule Systems},
+  year      = {2008},
+  editor    = {Calvanese, Diego and Lausen, Georg},
+  volume    = {5341},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {1--11},
+  publisher = {Springer Berlin Heidelberg},
+  _doi       = {10.1007/978-3-540-88737-9_1},
+  groups    = {ReasoningValidation},
+  owner     = {},
+  timestamp = {2018.07.24},
+}
