some more introduction

--- a/refs.bib
+++ b/refs.bib
@@ -237,7 +237,50 @@ year = 2014,
   year = 2014
 }
 
-
+@online{XML,
+  author = {    Tim Bray and
+    Jean Paoli and
+    C. M. Sperberg-McQueen and
+    Eve Maler and
+    François Yergeau and
+    John Cowan },
+  title = {{Extensible Markup Language (XML) 1.1 (Second Edition)}},
+  note =  {\url{https://www.w3.org/TR/xml11/}},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  day = 16,
+  month = aug,
+  year = 2006
+}
+@online{rifbld,
+  author = {
+    Harold Boley and
+    Michael Kifer
+  },
+  editor={  },   
+  title = {RIF Basic Logic Dialect (Second Edition)},
+  note = {\url{https://www.w3.org/TR/rif-bld/}},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  day = 5,
+  month = feb,
+  year = 2013,
+}
+@online{rifcore,
+  author = {
+    Harold Boley and
+    Gary Hallmark and
+    Michael Kifer and
+    Adrian Paschke and
+    Axel Polleres and
+    Dave Reynolds
+  },
+  editor={  },   
+  title = {RIF Core Dialect (Second Edition)},
+  note = {\url{https://www.w3.org/TR/rif-core/}},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  day = 5,
+  month = feb,
+  year = 2013,
+}
 
 
 @online{RDFSemantics,
@@ -1517,8 +1560,8 @@ isbn="978-3-540-32028-9"
 @online{owlrdfsem,
   author = {     Carroll, Jeremy and
      Herman, Ivan and
-     Patel-Schneider, Peter F.  },
-  editor={Schneider, Michael}   
+     Patel-Schneider, Peter F. and Schneider, Michael },
+  editor={},   
   title = {OWL 2 Web Ontology Language
 RDF-Based Semantics (Second Edition)},
   note = {\url{https://www.w3.org/TR/owl2-rdf-based-semantics/}},
@@ -1528,12 +1571,14 @@ RDF-Based Semantics (Second Edition)},
   year = 2012,
 }
 @online{owldsem,
-  author = {Horrocks,       Ian and
+  author = {Horrocks, Ian and
     Parsia, Bijan and 
-    Sattler, Uli   },
-  editor={    Motik, Boris and
+    Sattler, Uli
+    and 
+    Motik, Boris and
      Patel-Schneider, Peter F. and
-    Cuenca Grau, Bernardo }   
+    Cuenca Grau, Bernardo},
+  editor={  },   
   title = {OWL 2 Web Ontology Language
 Direct Semantics (Second Edition)},
   note = {\url{https://www.w3.org/TR/owl2-direct-semantics/}},
@@ -1557,3 +1602,38 @@ Direct Semantics (Second Edition)},
   owner     = {},
   timestamp = {2018.07.24},
 }
+@online{rifprd,
+  author = {
+      de Sainte Marie, Christian and
+     Hallmark, Gary and
+    Paschke, Adrian 
+  },
+  editor={  },   
+  title = {RIF Production Rule Dialect (Second Edition)},
+  note = {\url{https://www.w3.org/TR/rif-prd/}},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  day = 5,
+  month = feb,
+  year = 2013,
+}
+@online{rifrdf,
+  author = {
+         Jos de Bruijn and
+    Chris Welty
+  },
+  editor={  },   
+  title = {RIF RDF and OWL Compatibility (Second Edition)},
+  note = {\url{https://www.w3.org/TR/rif-rdf-owl/}},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  day = 5,
+  month = feb,
+  year = 2013,
+}
+@book{dl,
+ editor = {Baader, Franz and Calvanese, Diego and McGuinness, Deborah L. and Nardi, Daniele and Patel-Schneider, Peter F.},
+ title = {The Description Logic Handbook: Theory, Implementation, and Applications},
+ year = {2003},
+ isbn = {0-521-78176-0},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
