change to rdf and others section

--- a/refs.bib
+++ b/refs.bib
@@ -625,12 +625,6 @@ year = {}
    year = {2001}
 }
 
-@electonic{LODCloud,
-  title={State of the {\sc lod} Cloud},
-  author={Bizer, C. and Jentzsch, A. and Cyganiak, R.},
-  note={\url{http://www4.wiwiss.fu-berlin.de/lodcloud/state}},
-  year={2011},
-}
 
 @inproceedings{verborgh_iwebss_2012,
   title = {A Social Description Revolution---Describing {Web} {\sc api}s' Social Parameters with \restdesc},
@@ -942,6 +936,18 @@ month = feb,
 year = 2014,
 }
 
+@online{LODCloud,
+  title={State of the {\sc lod} Cloud},
+  author={
+    Andrejs Abele and
+    Paul Buitelaar and
+    Richard Cyganiak and
+    Anja Jentzsch and
+    Vladimir Andryushechkin
+},
+  note={\url{https://lod-cloud.net/}},
+  year={2018},
+}
 
 @article{PP,
   title = {The Pragmatic Proof: {Hypermedia API} Composition and Execution},
@@ -1587,6 +1593,23 @@ Direct Semantics (Second Edition)},
   month = dec,
   year = 2012,
 }
+@online{owltordf,
+  author = {        Peter F. Patel-Schneider and
+    Boris Motik and
+    Bernardo Cuenca Grau and
+    Ian Horrocks and
+    Bijan Parsia and
+    Alan Ruttenberg and
+    Michael Schneider },
+  editor={},   
+  title = {OWL 2 Web Ontology Language
+Mapping to RDF Graphs (Second Edition)},
+  note = {\url{https://www.w3.org/TR/owl-mapping-to-rdf/}},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  day = 11,
+  month = dec,
+  year = 2012,
+}
 @InProceedings{rif,
   author    = {Michael Kifer},
   title     = {Rule Interchange Format: The Framework},
@@ -1637,3 +1660,40 @@ Direct Semantics (Second Edition)},
  publisher = {Cambridge University Press},
  address = {New York, NY, USA},
 } 
+
+
+@book{iswc,
+  title = {Proceedings of the 17th International Semantic Web Conference},
+  year = 2018,
+  month = oct,
+  series = {Lecture Notes in Computer Science},
+  volume = 11137,
+  editor = {Vrande\v{c}i\'{c}, Denny and Bontcheva, Kalina and Su\'arez-Figueroa, Mari Carmen and Presutti, Valentina and Celino, Irene and Sabou, Marta and Kaffee, Lucie-Aim\'ee and Simperl, Elena},
+  publisher = {Springer},
+  isbn = {978-3-030-00668-6},
+}
+
+@book{eswc,
+editor="Gangemi, Aldo
+and Navigli, Roberto
+and Vidal, Maria-Esther
+and Hitzler, Pascal
+and Troncy, Rapha{\"e}l
+and Hollink, Laura
+and Tordai, Anna
+and Alam, Mehwish",
+title="Proceedings of the 15th ESWC",
+year="2018",
+publisher="Springer",
+  series = {Lecture Notes in Computer Science},
+    volume = 10843,
+}
+
+@online{spin,
+author= {Holger Knublauch and James Hendler and Kingsley Idehen},
+note= {\url{https://www.w3.org/Submission/spin-overview/}},
+title= {{SPIN - Overview and Motivation}},
+howpublished = {{\sc w\oldstylenums3c} Member Submission},
+month = feb,
+year = 2011,
+}
