--- a/refs.bib
+++ b/refs.bib
@@ -1697,3 +1697,13 @@ howpublished = {{\sc w\oldstylenums3c} Member Submission},
 month = feb,
 year = 2011,
 }
+
+@online{owlold,
+  author = {    Deborah L. McGuinness and
+    Frank van Harmelen },
+  title = {{\sc owl} {Web Ontology Language}},
+  note = {\url{hhttps://www.w3.org/TR/owl-features/}},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  month = feb,
+  year = 2004,
+}
