--- a/refs.bib
+++ b/refs.bib
@@ -1610,6 +1610,29 @@ Mapping to RDF Graphs (Second Edition)},
   month = dec,
   year = 2012,
 }
+@online{owlsyn1,
+  author = {       
+        Boris Motik and
+    Peter F. Patel-Schneider and
+    Bijan Parsia and
+    Conrad Bock and
+    Achille Fokoue and
+    Peter Haase and
+    Rinke Hoekstra and
+    Ian Horrocks and
+    Alan Ruttenberg and
+    Uli Sattler and
+    Michael Smith
+    },
+  editor={},   
+  title = {OWL 2 Web Ontology Language
+Structural Specification and Functional-Style Syntax (Second Edition)},
+  note = {\url{https://www.w3.org/TR/owl-syntax/}},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  day = 11,
+  month = dec,
+  year = 2012,
+}
 @InProceedings{rif,
   author    = {Michael Kifer},
   title     = {Rule Interchange Format: The Framework},
@@ -1706,4 +1729,40 @@ year = 2011,
   howpublished = {{\sc w\oldstylenums3c} Recommendation},
   month = feb,
   year = 2004,
+}
+@Article{hermit,
+    author = "Boris Motik and Rob Shearer and Ian Horrocks",
+    title = "{Hypertableau Reasoning for Description Logics}",
+    journal = "Journal of Artificial Intelligence Research",
+    year = "2009",
+    volume = "36",
+    pages = "165--228",
+}
+
+
+@InProceedings{rdfox,
+author="Nenov, Yavor
+and Piro, Robert
+and Motik, Boris
+and Horrocks, Ian
+and Wu, Zhe
+and Banerjee, Jay",
+editor="Arenas, Marcelo
+and Corcho, Oscar
+and Simperl, Elena
+and Strohmaier, Markus
+and d'Aquin, Mathieu
+and Srinivas, Kavitha
+and Groth, Paul
+and Dumontier, Michel
+and Heflin, Jeff
+and Thirunarayan, Krishnaprasad
+and Staab, Steffen",
+title="RDFox: A Highly-Scalable RDF Store",
+booktitle="The Semantic Web - ISWC 2015",
+year="2015",
+publisher="Springer International Publishing",
+address="Cham",
+pages="3--20",
+isbn="978-3-319-25010-6"
 }
