--- a/refs.bib
+++ b/refs.bib
@@ -1675,6 +1675,22 @@ Structural Specification and Functional-Style Syntax (Second Edition)},
   month = feb,
   year = 2013,
 }
+@online{rifinrdf,
+  author = {
+    Sandro Hawke and
+    Axel Polleres
+  },
+  editor={  },   
+  title = {RIF In RDF (Second Edition)},
+  note = {\url{https://www.w3.org/TR/rif-in-rdf/}},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  day = 5,
+  month = feb,
+  year = 2013,
+}
+
+
+
 @book{dl,
  editor = {Baader, Franz and Calvanese, Diego and McGuinness, Deborah L. and Nardi, Daniele and Patel-Schneider, Peter F.},
  title = {The Description Logic Handbook: Theory, Implementation, and Applications},
