closed world assumption

--- a/main.tex
+++ b/main.tex
@@ -370,10 +370,6 @@ citecolor = black]{hyperref} % make links
 % Indication of remarks
 \newcommand{\Remark}[1]{\noindent\textcolor{red}{{\bf \{Remark}: #1{\bf \}}}}
 
-% Indication of remarks
-\newcommand{\tom}[1]{\noindent\textcolor{orange}{{\bf \{Tom}: #1{\bf \}}}}
-\newcommand\rv[1]{\noindent\textcolor{orange}{{\bf \{Ruben}: #1{\bf \}}}}
-\newcommand\da[1]{\noindent\textcolor{blue}{{\bf \{D\"orthe}: #1{\bf \}}}}
 \newcolumntype{C}[1]{>{\centering\arraybackslash}p{#1}} % zentriert mit Breitenangabe
 
 %%%%%%%%%%%%%%%%5end: own staff%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -478,7 +474,7 @@ citecolor = black]{hyperref} % make links
 \part{Semantics}\label{semantics}
 
 \chapter{Motivation and Problems}\label{problem}
-
+use mention problem
 %\input{chapters/N3/Syntax}
 %\input{chapters/N3/Finding_the_meaning}
 %\input{chapters/N3/directsemantics}
@@ -491,7 +487,7 @@ citecolor = black]{hyperref} % make links
 \chapter{Use case: Nurse Call System}\label{orca}
 \chapter{Use case: Data Validation}\label{validation}
 
-
+\texttt{pred:literal-not-identical} instead of general string comparison
 
 
 
