--- a/refs.bib
+++ b/refs.bib
@@ -1854,3 +1854,57 @@ isbn="978-3-540-39587-4",
 doi="10.1007/11853107_11",
 url="http://dx.doi.org/10.1007/11853107_11"
 }
+@Inbook{owlandrules,
+author="Krisnadhi, Adila
+and Maier, Frederick
+and Hitzler, Pascal",
+editor="Polleres, Axel
+and d'Amato, Claudia
+and Arenas, Marcelo
+and Handschuh, Siegfried
+and Kroner, Paula
+and Ossowski, Sascha
+and Patel-Schneider, Peter",
+title="OWL and Rules",
+bookTitle="Reasoning Web. Semantic Technologies for the Web of Data: 7th International Summer School 2011, Galway, Ireland, August 23-27, 2011, Tutorial Lectures",
+year="2011",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="382--415",
+abstract="The relationship between the Web Ontology Language OWL and rule-based formalisms has been the subject of many discussions and research investigations, some of them controversial. From the many attempts to reconcile the two paradigms, we present some of the newest developments. More precisely, we show which kind of rules can be modeled in the current version of OWL, and we show how OWL can be extended to incorporate rules. We finally give references to a large body of work on rules and OWL.",
+isbn="978-3-642-23032-5",
+doi="10.1007/978-3-642-23032-5_7",
+url="https://doi.org/10.1007/978-3-642-23032-5_7"
+}
+@inproceedings{dllog,
+ author = {Rosati, Riccardo},
+ title = {DL+Log: Tight Integration of Description Logics and Disjunctive Datalog},
+ booktitle = {Proceedings of the Tenth International Conference on Principles of Knowledge Representation and Reasoning},
+ series = {KR'06},
+ year = {2006},
+ isbn = {978-1-57735-271-6},
+ location = {Lake District, UK},
+ pages = {68--78},
+ numpages = {11},
+ url = {http://dl.acm.org/citation.cfm?id=3029947.3029960},
+ acmid = {3029960},
+ publisher = {AAAI Press},
+} 
+@inproceedings{orl,
+ author = {Horrocks, Ian and Patel-Schneider, Peter F.},
+ title = {A Proposal for an Owl Rules Language},
+ booktitle = {Proceedings of the 13th International Conference on World Wide Web},
+ series = {WWW '04},
+ year = {2004},
+ isbn = {1-58113-844-X},
+ location = {New York, NY, USA},
+ pages = {723--731},
+ numpages = {9},
+ url = {http://doi.acm.org/10.1145/988672.988771},
+ doi = {10.1145/988672.988771},
+ acmid = {988771},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {model-theoretic semantics, representation, semantic web},
+} 
+
