more research questions

--- a/refs.bib
+++ b/refs.bib
@@ -1907,4 +1907,15 @@ url="https://doi.org/10.1007/978-3-642-23032-5_7"
  address = {New York, NY, USA},
  keywords = {model-theoretic semantics, representation, semantic web},
 } 
-
+@ARTICLE{n3app,
+author={S. Mayer and R. Verborgh and M. Kovatsch and F. Mattern},
+journal={IEEE Transactions on Automation Science and Engineering},
+title={Smart Configuration of Smart Environments},
+year={2016},
+volume={13},
+number={3},
+pages={1247-1255},
+keywords={inference mechanisms;Internet of Things;meta data;ubiquitous computing;visual programming;Internet of Things;ubiquitous computing;smart environment;service composition system;goal-driven configuration;semantic metadata;reasoning;visual modeling tool;process-driven approach;service mashups;embedded semantic API descriptions;application program interfaces;smart homes;Semantics;Mashups;Visualization;Manufacturing;Internet of things;Protocols;Context;Internet of Things;semantic technologies;service composition;smart factory;smart home;web of things},
+doi={10.1109/TASE.2016.2533321},
+ISSN={1545-5955},
+month={July},}
