--- a/refs.bib
+++ b/refs.bib
@@ -1919,3 +1919,10 @@ keywords={inference mechanisms;Internet of Things;meta data;ubiquitous computing
 doi={10.1109/TASE.2016.2533321},
 ISSN={1545-5955},
 month={July},}
+
+@phdthesis{hartmann2016,
+  title={Validation Framework for RDF-based Constraint Languages},
+  author={Hartmann, Thomas},
+  year={2016},
+  school={Dissertation, Karlsruhe, Karlsruher Institut f{\"u}r Technologie (KIT), 2016}
+}
