--- a/main.tex
+++ b/main.tex
@@ -370,6 +370,9 @@ citecolor = black]{hyperref} % make links
 % Indication of remarks
 \newcommand{\Remark}[1]{\noindent\textcolor{red}{{\bf \{Remark}: #1{\bf \}}}}
 
+\newcommand{\hyp}[2]{\textbf{#1 }\textit{#2}}
+
+
 \newcolumntype{C}[1]{>{\centering\arraybackslash}p{#1}} % zentriert mit Breitenangabe
 
 %%%%%%%%%%%%%%%%5end: own staff%%%%%%%%%%%%%%%%%%%%%%%%%%
