--- a/main.tex
+++ b/main.tex
@@ -482,7 +482,7 @@ use mention problem
 %\input{chapters/N3/Finding_the_meaning}
 %\input{chapters/N3/directsemantics}
 \chapter{Elaboration Semantics for N3}\label{ela}
-\chapter{Explicit Semantics for N3}\label{exsem}
+\chapter{Direct Semantics for N3}\label{exsem}
 
 
 \part{N3 in relation to other frameworks}\label{others}
