--- a/main.tex
+++ b/main.tex
@@ -181,8 +181,8 @@ citecolor = black]{hyperref} % make links
 \renewcommand{\sectionmark}[1]{\markright{#1}}
 \setcounter{tocdepth}{1}
 
-\setcounter{tocdepth}{3}
-\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{1}
+\setcounter{secnumdepth}{2}
 
 
 \makeatother
@@ -233,7 +233,7 @@ citecolor = black]{hyperref} % make links
 \usepackage{csquotes}
 %\usepackage{mathptmx}
 \usepackage{amssymb}
-\setcounter{tocdepth}{3}
+\setcounter{tocdepth}{1}
 \usepackage{amsthm} 
 \usepackage{amsfonts}
 \usepackage{longtable}
@@ -252,6 +252,9 @@ citecolor = black]{hyperref} % make links
 \usepackage{supertabular,booktabs}
 %\usepackage{pifont}
 \usepackage{array}
+
+%for better typewriter 
+\usepackage{courier}
 
 \usepackage[multiple]{footmisc}
 
